Fix z-index of dash nav

--- a/app/assets/stylesheets/components/dashnavbar.scss
+++ b/app/assets/stylesheets/components/dashnavbar.scss
@@ -1,7 +1,7 @@
 .dashboard-nav-container {
   position: fixed;
   background-color: $white;
-  z-index: 5;
+  z-index: 15;
   height: 55px;
   width: 100%;
   margin: 0 auto;
